<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_complete_project_recursively"
        android:icon="@drawable/icon_done_recursive_24px"
        android:tint="?attr/colorText"
        android:title="@string/complete_dependencies"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_complete_project"
        android:icon="@drawable/icon_done_24px"
        android:tint="?attr/colorText"
        android:title="@string/complete_project"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_add_goal"
        android:icon="@drawable/icon_list_add_24px"
        android:tint="?attr/colorText"
        android:title="@string/add_goal"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_move_goal_up"
        android:icon="@drawable/icon_list_move_up_24px"
        android:tint="?attr/colorText"
        android:title="@string/move_up"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_move_goal_down"
        android:icon="@drawable/icon_list_move_down_24px"
        android:tint="?attr/colorText"
        android:title="@string/move_down"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_remove_goal"
        android:icon="@drawable/icon_list_remove_24px"
        android:tint="?attr/colorText"
        android:title="@string/remove"
        app:showAsAction="always"/>
</menu>
